frontend/tests/errors/ER-041/missing_colon_type_annotation/test.vx
// @rfc: docs/vexel-rfc.md#types
// @desc: Typed declarations require ':' before the type. | Reject declaration form 'name #T = expr'

bad #i32 = 3;

&^main() -> #i32 {
    bad
}
